--- a/main.css
+++ b/main.css
@@ -1,6 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Commissioner&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+body    {
+    background-color: #F8EDE3;
+    padding: 20% 0%;
+    line-height: 2.5em;
+}
 
-div {
-    font-size: 1.5em;
-    font-family: 'Commissioner', sans-serif;
+div     {
+    color: #495579;
+    text-align: center;
+    font-size: 1.2em;
+    font-family: 'Inter', sans-serif;
 }
