--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,85 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 body    {
     background-color: #F8EDE3;
+    color: #3C2A21;
     padding: 10% 25%;
-    line-height: 2.5em;
+    line-height: 2.2em;
+    font-family: 'Work Sans', sans-serif;
 }
 
-div     {
-    color: #3C2A21;
+.hi {
+    text-align: left;
+    font-size: 1.5em;
+}
+
+.intro  {
     text-align: left;
     font-size: 1.2em;
+}
+
+footer  {
+    padding: 2em 0em;
+}
+
+.instagram  {
+    padding: 0em 2em 0em 0em;
+    text-decoration: none;
+    font-size: 1em;
+    font-weight: 500;
     font-family: 'Work Sans', sans-serif;
+    color: #a48676;
+    /*background: -webkit-linear-gradient(left, #7C65DA, #DB1CB1, #E54290, #ffaa00);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;*/
+}
+.instagram:hover  {
+    padding: 0em 2em 0em 0em;
+    text-decoration: none;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: 'Work Sans', sans-serif;
+    /*color: #a48676;*/
+    background: -webkit-linear-gradient(left, #7C65DA, #DB1CB1, #E54290, #ffaa00);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.behance    {
+    padding: 0em 2em 0em 0em;
+    text-decoration: none;
+    color: #a48676;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: 'Work Sans', sans-serif;
+}
+.behance:hover    {
+    padding: 0em 2em 0em 0em;
+    text-decoration: none;
+    color: #053EFF;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: 'Work Sans', sans-serif;
+}
+.linkedin    {
+    padding: 0em 2em 0em 0em;
+    text-decoration: none;
+    color: #a48676;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: 'Work Sans', sans-serif;
+}
+.linkedin:hover    {
+    padding: 0em 2em 0em 0em;
+    text-decoration: none;
+    color: #0077B5;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: 'Work Sans', sans-serif;
+}
+
+.projects   {
+    color: #d3c0b5;
+    padding: 2em 0em;
+    text-align: center;
+    /*background-color: #e5d8d1;*/
+    border-radius: 12px;
 }
