--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,11 @@ body    {
 }
 
 footer  {
-    padding: 2em 0em;
+    padding: 1em 0em;
 }
 
 .instagram  {
-    padding: 0em 2em 0em 0em;
+    padding: 0em 1em 0em 0em;
     text-decoration: none;
     font-size: 1em;
     font-weight: 500;
@@ -34,7 +34,7 @@ footer  {
   -webkit-text-fill-color: transparent;*/
 }
 .instagram:hover  {
-    padding: 0em 2em 0em 0em;
+    padding: 0em 1em 0em 0em;
     text-decoration: none;
     font-size: 1em;
     font-weight: 500;
@@ -45,7 +45,7 @@ footer  {
   -webkit-text-fill-color: transparent;
 }
 .behance    {
-    padding: 0em 2em 0em 0em;
+    padding: 0em 1em 0em 0em;
     text-decoration: none;
     color: #a48676;
     font-size: 1em;
@@ -53,7 +53,7 @@ footer  {
     font-family: 'Work Sans', sans-serif;
 }
 .behance:hover    {
-    padding: 0em 2em 0em 0em;
+    padding: 0em 1em 0em 0em;
     text-decoration: none;
     color: #053EFF;
     font-size: 1em;
@@ -61,7 +61,7 @@ footer  {
     font-family: 'Work Sans', sans-serif;
 }
 .linkedin    {
-    padding: 0em 2em 0em 0em;
+    padding: 0em 1em 0em 0em;
     text-decoration: none;
     color: #a48676;
     font-size: 1em;
@@ -69,7 +69,7 @@ footer  {
     font-family: 'Work Sans', sans-serif;
 }
 .linkedin:hover    {
-    padding: 0em 2em 0em 0em;
+    padding: 0em 1em 0em 0em;
     text-decoration: none;
     color: #0077B5;
     font-size: 1em;
@@ -88,16 +88,15 @@ footer  {
 
 @media screen and (max-width: 800px) {
     body {
-      padding: 8%;
+      padding: 10%;
     }
 
     footer {
-        padding: 1em 0em;
+        padding: 0.5em 0em;
     }
 
     .instagram, .instagram:hover, .behance, .behance:hover, .linkedin, .linkedin:hover  {
-        padding: 0em, 0.5em;
-        text-align: center;
-        width: 100%;
+        padding: 0em, 1em, 0em, 0em;
+        
     }
 }
