--- a/css/main.css
+++ b/css/main.css
@@ -8,68 +8,101 @@ body    {
     text-size-adjust: auto;
 }
 
+a {    
+    text-decoration: none;
+    color: #3C2A21;
+}
 .hi {
     font-size: 1.5em;
 }
-
 .intro  {
     font-size: 1.2em;
 }
-
-footer  {
-    padding: 1em 0em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: 'Work Sans', sans-serif;
-}
-
-.instagram, .behance, .linkedin  {
+.instagram, .behance, .linkedin, .VSCO  {
     padding: 0em 1em 0em 0em;
     text-decoration: none;
-    color: #a48676;
+    color: #c9b7a7;
 }
 .instagram:hover  {
     background: -webkit-linear-gradient(left, #7C65DA, #DB1CB1, #E54290, #ffaa00);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 .behance:hover    {
     color: #144bff;
 }
 .linkedin:hover    {
     color: #0077B5;
 }
+.VSCO:hover    {
+    color: #141414;
+}
 
-.projects   {
-    color: #d3c0b5;
-    padding: 2em 0em;
-    text-align: center;
+
+  
+  /* Style the tab */
+  .tab {
+    overflow: hidden;
+  }
+
+  .tablinks {
+    padding: 0em;
+  }
+  
+  /* Style the buttons inside the tab */
+  .tab button {
+    background-color: inherit;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    /*transition: 0.3s;*/
+    color: #c9b7a7;
+    font-weight: 600;
+    padding: 0em 1em 0em 0em;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    color: #a48676;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    color: #F96849;
+    text-decoration: underline;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    border-top: none;
     background-color: #F8EDE3;
     border-radius: 12px;
+  }
+
+  .project  {
+    font-size: 0.9em;
+    font-weight: 600;
+    color:#3C2A21;
+    border-radius: 10px;
+    padding: 0.2em 0em;
+  }
+  .project:hover  {
+    background-color: rgb(241, 229, 215);
+    padding: 0.2em 1em;
 }
 
 
 @media screen and (max-width: 800px) {
-    body {
-      padding: 10%;
-    }
+  body {
+    padding: 10%;
+  }
 
-    footer {
-        padding: 0.5em 0em;
-    }
+  footer {
+    padding: 0.5em 0em;
+  }
 
-    .instagram, .instagram:hover, .behance, .behance:hover, .linkedin, .linkedin:hover  {
-        padding: 0em, 1em, 0em, 0em;
-        
-    }
+  .instagram, .instagram:hover, .behance, .behance:hover, .linkedin, .linkedin:hover  {
+    padding: 0em, 1em, 0em, 0em;
+  }
 }
-
-/*   DARK MODE with system theme
-@media (prefers-color-scheme: dark) {
-    body    {
-        background-color: #3f332f;
-        color: #dbc3ac;
-    };
-}
-*/
