--- a/css/main.css
+++ b/css/main.css
@@ -144,10 +144,20 @@ a {
   padding: 0.2em 1em;
 }
 
+@media screen and (max-width: 1035px) {
+  body  {
+    padding: 4em 20% 5% 20%;
+  }
+
+  .timeline p   {
+    line-height: 1.6em;
+  }
+
+}
 
 @media screen and (max-width: 800px) {
   body {
-    padding: 2em 10% 10% 10%;
+    padding: 2em 6% 10% 6%;
   }
 
   .timeline p   {
@@ -161,12 +171,4 @@ a {
   .instagram, .instagram:hover, .behance, .behance:hover, .linkedin, .linkedin:hover  {
     padding: 0em, 1em, 0em, 0em;
   }
-}
-
-@media screen and (max-width: 1035px) {
-
-  .timeline p   {
-    line-height: 1.6em;
-  }
-
 }
