--- a/css/main.css
+++ b/css/main.css
@@ -75,11 +75,18 @@ a {
   border: 16px solid white;
   background-color: white;
   padding: 0em 0em 1.2em 0em;
+  transition: 0.3s;
   rotate: -2deg;
 
   margin-left: auto;
   margin-right: auto;
   display: block;
+}
+
+.profile_img img:hover  {
+  transition: 0.4s;
+  rotate: 1deg;
+  max-width: 270px;
 }
 
 .rightlink:hover {
@@ -136,10 +143,12 @@ a {
   color:#3C2A21;
   border-radius: 10px;
   padding: 0.2em 0em;
+  transition: 0.3s;
 }
 
 .tabcontent a:hover  {
   float: left;
+  transition: 0.3s;
   background-color: rgb(241, 229, 215);
   padding: 0.2em 1em;
 }
