--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ a {
 .profile_img img:hover  {
   transition: 0.2s;
   rotate: 1deg;
-  max-width: 270px;
+  max-width: 259px;
 }
 
 .rightlink:hover {
@@ -102,6 +102,7 @@ a {
 .tab {
   overflow: hidden; 
   width: 800px;
+  padding-bottom: 0.4em;
 }
 .tab2 {
   display: none;
