--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 body    {
   background-color: #F8EDE3;
   color: #3C2A21;
-  padding: 4em 7% 5% 5%;
+  padding: 4em 7% 2em 5%;
   line-height: 2.1em;
   font-family: 'Work Sans', sans-serif;
   text-size-adjust: auto;
@@ -11,6 +11,10 @@ body    {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+footer{
+  display: block;
 }
 
 a {    
@@ -45,11 +49,11 @@ a {
 .timeline  {
   line-height: 1.2em;
   padding: 0em 0em 2em 0em;
+  display: block;
 }
 
 .instagram, .behance, .linkedin, .VSCO, .small_link  {
   padding: 0em 1em 0em 0em;
-  float: left;
   text-decoration: none;
   color: #c9b7a7;
   font-weight: 400;
@@ -72,11 +76,12 @@ a {
 
 .profile_img  {
   width: 100%;
-  padding: 2em 0em 1.5em 0em;
-  float: left;
+  padding: 3em 0em 1.5em 0em;
+  display: block;
 }
 
 .profile_img  img{
+  display: block;
   max-width: 250px;
   border: 16px solid white;
   background-color: white;
