--- a/projects/Pixel/2_proj_images/Alen Antony Francis_files/main.css
+++ b/projects/Pixel/2_proj_images/Alen Antony Francis_files/main.css
@@ -1,7 +1,82 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+.filterDiv  {
+  line-height: 1.4em;
+  display: none;
+  float: left;
+  width: 95%;
+  font-size: 0.9em;
+  font-weight: 600;
+  transition: padding 0.1s;
+}
+
+.filterDiv a  {
+  float: left;
+  padding: 0.6em 0em;
+  width: 95%;
+}
+
+.filterDiv a:hover  {
+  float: left;
+  width: 95%;
+  transition: 0.2s;
+  background-color: rgb(241, 229, 215);
+  padding: 0.6em 0.7em;
+  border-radius: 10px;
+}
+
+.show {
+  display: block;
+}
+
+.container {
+  margin-top: 20px;
+  overflow: hidden;
+}
+
+/* Style the buttons */
+.btn {
+  font-variant: small-caps;
+  font-size: 1.4em;
+  background-color: inherit;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  /*transition: 0.3s;*/
+  color: #c9b7a7;
+  font-weight: 600;
+  padding: 0em 1em 0em 0em;
+}
+
+.btn:hover {
+  color: #a48676;
+}
+
+.btn.active {
+  color: #F96849;
+  text-decoration: underline;
+}
 
 
-/* STRUCTURE */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 body    {
   background-color: #F8EDE3;
@@ -11,7 +86,8 @@ body    {
   font-family: 'Work Sans', sans-serif;
   text-size-adjust: auto;
 
-  max-width: 800px;  
+  max-width: 800px;
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -25,111 +101,34 @@ a {
     color: #3C2A21;
 }
 
-
-/* HEADER */
-
 .hi {
   font-size: 1.5em;
+  padding-top: 0.1em;
   width: fit-content;
+  float: left;
   background-color: none;
 }
 
 .rightlink  {
   color: #a48676;
+  float: right;
   font-size: 1.2em;
   padding: 0em 0.8em 0.1em 0.8em;
   font-weight: 600;
   border-radius: 12px;
   font-variant: small-caps;
-  float: right;
 }
-.rightlink:hover {
-  background-color: rgb(241, 229, 215);
-  color: #3C2A21;
-}
-
-
 .intro  {
   font-size: 1.1em;
   padding: 1em 0em 2em 0em;
-  display: block;
   float: left;
 }
 
-/* PROJECTS TAB FILTER */
-
-.filterDiv  {
-  display: none;
-  float: left;
-  width: 95%;
-  font-size: 0.9em;
-  font-weight: 600;
-}
-.filterDiv a  {
-  float: left;
-  padding: 0.6em 0em;
-  width: 95%;
-  transition: padding 0.2s;
-}
-.filterDiv a:hover  {
-  float: left;
-  width: 95%;
-  transition: 0.2s;
-  background-color: rgb(241, 229, 215);
-  padding: 0.6em 0.7em;
-  border-radius: 10px;
-}
-
-.tab1 {
-  max-width: 800px;
+.timeline  {
+  line-height: 1.2em;
+  padding: 0em 0em 2em 0em;
   display: block;
 }
-.tab2 {
-  display: none;
-}
-
-.show {
-  display: block;
-}
-
-.container {
-  margin-top: 0.5em;
-  overflow: hidden;
-}
-
-.btn {
-  font-variant: small-caps;
-  font-size: 1.4em;
-  background-color: inherit;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  color: #c9b7a7;
-  font-weight: 600;
-  padding: 0em 1em 0em 0em;
-}
-.btn:hover {
-  color: #a48676;
-}
-.btn.active {
-  color: #F96849;
-  text-decoration: underline;
-}
-
-.home_thumb {
-  width: 60px;
-  height: 60px;
-  object-fit: fill;
-  border-radius: 12px;
-  float: left;
-}
-
-.proj {
-  margin: 0em 0em 0em 5em;
-  line-height: 0.6em;
-}
-
-/* FOOTER SOCIALS */
 
 .instagram, .behance, .linkedin, .VSCO, .small_link  {
   padding: 0em 1em 0em 0em;
@@ -153,21 +152,12 @@ a {
     color: #141414;
 }
 
-/* ABOUT - TRACK RECORD */
-
-.timeline  {
-  line-height: 1.2em;
-  padding: 0em 0em 2em 0em;
-  display: block;
-}
-
-/* PROFILE IMAGE */
-
 .profile_img  {
   width: 100%;
-  padding: 2em 0em 1.5em 0em;
+  padding: 3em 0em 1.5em 0em;
   display: block;
 }
+
 .profile_img  img{
   display: block;
   max-width: 250px;
@@ -178,13 +168,103 @@ a {
   rotate: -2deg;
   border-radius: 4px;
 }
+
 .profile_img img:hover  {
   transition: 0.2s;
   rotate: 1deg;
   max-width: 259px;
 }
 
-/* TABLET */
+.eating_image {
+  margin: -15.7px 0em 2em 2em;
+  font-size: 0.6em;
+  opacity: 0.4;
+  rotate: -2deg;
+}
+
+
+.rightlink:hover {
+  background-color: rgb(241, 229, 215);
+  color: #3C2A21;
+}
+
+
+  
+/* Style the tab */
+.tab {
+  overflow: hidden; 
+  width: 800px;
+  padding-bottom: 0.4em;
+}
+.tab2 {
+  display: none;
+}
+
+.tablinks {
+  padding: 0em;
+  font-variant: small-caps;
+  font-size: 1.4em;
+}
+  
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  /*transition: 0.3s;*/
+  color: #c9b7a7;
+  font-weight: 600;
+  padding: 0em 1em 0em 0em;
+}
+  
+/* Change background color of buttons on hover */
+.tab button:hover {
+  color: #a48676;
+}
+  
+/* Create an active/current tablink class */
+.tab button.active {
+  color: #F96849;
+  text-decoration: underline;
+}
+  
+
+.home_thumb {
+  width: 60px;
+  height: 60px;
+  object-fit: fill;
+  border-radius: 12px;
+  float: left;
+}
+
+.proj {
+  margin: 0em 0em 0em 5em;
+  line-height: 0.6em;
+}
+
+/* Style the tab content */
+.tabcontent {
+  padding: 0em 0em 200px 0em;
+}
+
+.tabcontent a {
+  float: left;
+  width: 95%;
+  font-size: 0.9em;
+  font-weight: 600;
+  color:#3C2A21;
+  border-radius: 10px;
+  padding: 0.6em 0em;
+  transition: padding 0.1s;
+}
+
+.tabcontent a:hover  {
+  float: left;
+  transition: 0.2s;
+  background-color: rgb(241, 229, 215);
+  padding: 0.6em 0.7em;
+}
 
 @media screen and (max-width: 1035px) {
   body  {
@@ -198,40 +278,31 @@ a {
   .timeline p   {
     line-height: 1.6em;
   }
-}
 
-/* MOBILE */
+}
 
 @media screen and (max-width: 600px) {
   body {
     padding: 2em 6% 10% 6%;
   }
 
-  footer {
-    padding: 2em 0em;
-  }
-
-  .filterDiv a  {
-    float: left;
-    padding: 0.6em 0em;
-    width: 95%;
-  }
-
   .profile_img  {
     padding: 2em 0em 2em 0em;
   }
+
   .profile_img  img{
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .tab1    {
+  .myBtnContainer    {
     display: none;
   } 
+
   .tab2 {
     overflow: hidden; 
-    width: 100%;
+    width: 800px;
     font-variant: small-caps;
     text-decoration: none;
     font-size: 1.4em;
@@ -242,6 +313,10 @@ a {
 
   .timeline p   {
     line-height: 1.8em;
+  }
+
+  footer {
+    padding: 2em 0em;
   }
 
   .instagram, .instagram:hover, .behance, .behance:hover, .linkedin, .linkedin:hover  {
