--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,7 @@ a {
   line-height: 0.6em;
 }
 
+
 /* FOOTER SOCIALS */
 
 .instagram, .behance, .linkedin, .VSCO, .small_link  {
@@ -213,8 +214,12 @@ a {
 
   .filterDiv a  {
     float: left;
-    padding: 0.6em 0em;
+    padding: 0.6em 0em 0.2em 0em;
     width: 95%;
+  }
+
+  .filterDiv a:hover  {
+    padding: 0.6em 0em 0.2em 0.7em;
   }
 
   .profile_img  {
@@ -238,6 +243,15 @@ a {
     font-weight: 600;
     color: #F96849;
     display: block;
+  }
+
+
+  .proj p{
+    line-height: 1.3em;
+  }
+
+  .proj div   {
+    display: none;
   }
 
   .timeline p   {
