--- a/css/projects.css
+++ b/css/projects.css
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
+@font-face {
+	font-family: "Dref Sans";
+	src: url(../DrefSansVF.ttf);
+}
+
 body    {
     background-color: #F8EDE3;
     color: #3C2A21;
     padding: 4em 7% 5% 5%;
-    line-height: 2.1em;
-    font-family: 'Work Sans', sans-serif;
+    line-height: 2em;
+    font-family: 'Dref Sans', sans-serif;
     text-size-adjust: auto;
+    font-variation-settings: "wdth" 6.4;
 
     max-width: 800px;
     margin-top: 0em;
@@ -134,7 +141,7 @@ footer {
 
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 500px) {
     body {
         padding: 2em 6% 10% 6%;
     }
@@ -147,7 +154,17 @@ footer {
         padding: 0.5em 0em;
     }
 
+    footer  .rightlink  {
+        float: none;
+        padding: 0em;
+    }
+    footer .rightlink:hover {
+        background-color: #F8EDE3;
+    }
+
     .instagram, .instagram:hover, .behance, .behance:hover, .linkedin, .linkedin:hover  {
         padding: 0em, 1em, 0em, 0em;
+        width: 30%;
+        display: block;
     }
 }
